--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 
 <script type="text/javascript" src="src/BirdStatue.js"></script>
+<script type="text/javascript" src="src/intro.js"></script>
 <script type="text/javascript" src="src/GameSetup.js"></script>
 
 </body>
